<resources>
    <string name="app_name">Discgolfriend</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">History</string>
    <string name="title_notifications">Stats</string>
    <string name="home_player">Add player</string>
    <string name="home_newplayer">New player</string>
    <string name="home_start">Start round</string>
    <string name="button_prev">Previous</string>
    <string name="button_next">Next</string>
    <string name="button_back_home">New round</string>
    <string name="history_player">Player</string>
    <string name="history_course">Course</string>
    <string name="round_holenumber">Hole </string>
    <string name="round_holelength">Length: </string>
    <string name="round_holepar">Par: </string>
    <string name="round_holeavg">Average: </string>
    <string name="stats_players">Players </string>
    <string name="stats_courses">Courses </string>
    <string name="player_stats_rounds">Rounds: </string>
    <string name="player_stats_birdies">Birdies: </string>
    <string name="player_stats_aces">Aces:  </string>
    <string name="player_stats_bogeys">Bogeys:  </string>
    <string name="player_stats_eagles">Eagles: </string>
    <string name="player_stats_pars">Pars: </string>
    <string name="new_player_hint">Give the name of the player </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>