<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.discgolfriend.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_home_to_roundFragment"
            app:destination="@id/RoundFragment" />
        <action
            android:id="@+id/action_navigation_home_to_resultFragment"
            app:destination="@id/resultFragment" />

    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.discgolfriend.ui.History.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.discgolfriend.ui.Stats.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_notifications_to_playerStatsFragment"
            app:destination="@id/playerStatsFragment" />
        <action
            android:id="@+id/action_navigation_notifications_self"
            app:destination="@id/navigation_notifications" />
        <action
            android:id="@+id/action_navigation_notifications_to_courseStats"
            app:destination="@id/courseStats" />
    </fragment>
    <fragment
        android:id="@+id/RoundFragment"
        android:name="com.example.discgolfriend.ui.home.RoundFragment"
        android:label="fragment_round"
        tools:layout="@layout/fragment_round" />
    <fragment
        android:id="@+id/resultFragment"
        android:name="com.example.discgolfriend.ui.home.ResultFragment"
        android:label="fragment_result"
        tools:layout="@layout/fragment_result" >
        <action
            android:id="@+id/action_resultFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/playerStatsFragment"
        android:name="com.example.discgolfriend.ui.Stats.PlayerStatsFragment"
        android:label="fragment_player_stats"
        tools:layout="@layout/fragment_player_stats" >
        <action
            android:id="@+id/action_playerStatsFragment_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>
    <fragment
        android:id="@+id/courseStats"
        android:name="com.example.discgolfriend.ui.Stats.CourseStats"
        android:label="fragment_course_stats"
        tools:layout="@layout/fragment_course_stats" >
        <action
            android:id="@+id/action_courseStats_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>
</navigation>